# notes-cli

./: Cargo.toml  README.md  lib.rs
src/: lib.rs  main.rs
tests/: cli.rs
