[package]
name = "notes"
version = "0.1.0"
edition = "2021"
authors = ["Austin <awalterdev@gmail.com>"]
# license = "MIT OR Apache-2.0"
description = "A tool to view git notes"
# readme = "README.md"
# homepage = "https://github.com/you/notes"
# repository = "https://github.com/you/notes"
keywords = ["notes", "git", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.1.6", features = ["derive"] }
git2 = "0.16.1"

[dev-dependencies]
assert_cmd = "2.0.8"
assert_fs = "1.0.10"
predicates = "2.1.5"

